# DalliKlickBot

./: .env  .gitignore  Cargo.toml  build.gradle.kts  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
src/: bot.rs  config.rs  context.rs  error.rs  handlers.rs  holder.rs  lib.rs  logging.rs  main.rs
src/command/: create.rs  mod.rs  ping.rs  upload.rs
src/database/: create.rs  mod.rs  upload.rs
src/game/: mod.rs
src/io/: mod.rs  upload.rs
src/main/java/de/leghast/: DalliKlickBot.java
src/main/java/de/leghast/dalliklick/: DalliKlickBot.java
src/main/java/de/leghast/dalliklick/command/: DalliKlickCommand.java  EditCommand.java  UploadCommand.java
src/main/java/de/leghast/dalliklick/database/: AsyncDriverQuery.java  Database.java  DatabaseCredentials.java  DriverQuery.java  Queries.java
src/main/java/de/leghast/dalliklick/exception/: APIConnectionException.java  ConfigurationException.java  DalliException.java  DirectoryException.java  GuildNotFoundException.java  ImageSaveException.java  UploadException.java
src/main/java/de/leghast/dalliklick/game/: Difficulty.java
src/main/java/de/leghast/dalliklick/handler/: ExceptionHandler.java  ExitHandler.java  FileHandler.java  RetrieveHandler.java  UploadHandler.java
src/main/java/de/leghast/dalliklick/holder/: BotCommands.java  DalliKlick.java  DatabaseDalliKlick.java  HandlerHolder.java
src/main/java/de/leghast/dalliklick/listener/: CommandListener.java  ContextListener.java  ReadyListener.java
src/main/java/de/leghast/dalliklick/state/: State.java
src/main/resources/: config.toml.example  logback.xml
