[package]
name = "dalli-klick-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serenity = "0.12.4"
tokio = { version = "1.44.2", features = ["full", "rt-multi-thread"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
